# rust-bio-seq-public

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/alignment/: sparse.codon
src/data_structures/: annot_map.codon  bit_tree.codon  bitenc.codon  interpolation_table.codon  interval_tree.codon  rank_select.codon  smallints.codon  wavelet_matrix.codon
src/data_structures/qgram_index/: alphabet_rank_transform.codon  qgram_index.codon  readme.md
src/pattern_matching/: bndm.codon  bndm.codon.py  bom.codon  horsepool.codon  horsepool.codon.py  myres.codon  pssm.codon  pssm.codon.py  ukkonen.codon.py
src/seq_analysis/: orf.codon
src/stats/: hmm.codon  hmm.codon.py
