[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.4.0"
bv = "0.11.1"

data-structures = "0.1.0"
approx = "0.5.1"  
ndarray = "0.15.6"  
serde = "1.0"
serde_derive = "1.0"
